fix(UI): Fix alignment for images in lists

--- a/ui/src/components/Markdown/Markdown.css
+++ b/ui/src/components/Markdown/Markdown.css
@@ -109,6 +109,14 @@
         @apply my-0 rounded-lg;
     }
 
+    li>figure {
+        @apply my-0 inline-block;
+        vertical-align: text-top;
+
+        figcaption {
+            @apply py-0 my-0;
+        }
+    }
 }
 
 .footnotes {
